--- a/specification/app/resource-manager/Microsoft.App/stable/2022-03-01/ContainerApps.json
+++ b/specification/app/resource-manager/Microsoft.App/stable/2022-03-01/ContainerApps.json
@@ -346,6 +346,9 @@
               "$ref": "#/definitions/CustomHostnameAnalysisResult"
             }
           },
+          "204": {
+            "description": "No content"
+          },
           "default": {
             "description": "Common error response.",
             "schema": {
