--- a/specification/loadtestservice/tspconfig.yaml
+++ b/specification/loadtestservice/tspconfig.yaml
@@ -1,23 +1,34 @@
-parameters:
-  service-directory-name:
-    default: "loadtesting"
+parameters:  
+  "service-dir":
+    default: "sdk/loadtesting"
+  "dependencies":
+    "additionalDirectories":
+      - "specification/contosowidgetmanager/Contoso.WidgetManager.Shared/"
+    default: ""
 emit:
-  # - "@azure-tools/typespec-autorest"
-  # Uncomment this line and add "@azure-tools/typespec-python" to your package.json to generate Python code
-  - "@azure-tools/typespec-python"
-  # Uncomment this line and add "@azure-tools/typespec-java" to your package.json to generate Java code
-  # "@azure-tools/typespec-java": true
-  # Uncomment this line and add "@azure-tools/typespec-csharp" to your package.json to generate C# code
-  # "@azure-tools/typespec-csharp": true
-  # Uncomment this line and add "@azure-tools/typespec-ts" to your package.json to generate Typescript code
-  # "@azure-tools/typespec-ts": true
+  - "@azure-tools/typespec-autorest"
 options:
-  # "@azure-tools/typespec-autorest":
-  #   emitter-output-dir: "{project-root}/../"
-  #   output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/contentsafety.json"
-  #   azure-resource-provider-folder: "data-plane"
-  #   examples-directory: ./examples
+  "@azure-tools/typespec-autorest":
+    azure-resource-provider-folder: "./data-plane"
+    emitter-output-dir: "{project-root}/.."
+    examples-directory: "./examples"
+    output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/widgets.json"
   "@azure-tools/typespec-python":
-    package-name: "azure-developer-loadtesting"
-    # emitter-output-dir: "{python-sdk-folder}/sdk/{service-directory-name}/{package-name}"
-    package-mode: dataplane
+    package-dir: "azure-contoso-widgetmanager"
+    package-mode: "dataplane"
+    package-name: "{package-dir}"
+  "@azure-tools/typespec-csharp":
+    package-dir: "Azure.Contoso.WidgetManager"
+    clear-output-folder: true
+    model-namespace: false
+    namespace: "{package-dir}"
+  "@azure-tools/typespec-ts":
+    package-dir: "load-testing-rest"
+    generateMetadata: true
+    generateTest: true
+    packageDetails:
+      name: "@azure-rest/load-testing"
+      description: "This package contains Microsoft Azure LoadTestingClient client library.e"
+  "@azure-tools/typespec-java":
+    package-dir: "azure-contoso-widgetmanager"
+    namespace: com.azure.contoso.widgetmanager
