--- a/specification/loadtestservice/tspconfig.yaml
+++ b/specification/loadtestservice/tspconfig.yaml
@@ -26,8 +26,8 @@ options:
     package-dir: "load-testing-rest"
     title: Azure Load Testing
     description: Azure Load Testing Client
-    generateMetadata: true
-    generateTest: true
+    generateMetadata: false
+    generateTest: false
     packageDetails:
       name: "@azure-rest/load-testing"
       description: "This package contains Microsoft Azure LoadTestingClient client library.e"
