--- a/specification/cognitiveservices/OpenAI.Inference/tspconfig.yaml
+++ b/specification/cognitiveservices/OpenAI.Inference/tspconfig.yaml
@@ -27,7 +27,7 @@ options:
     custom-types: "FunctionCallModelBase,FunctionCallPreset,FunctionCallPresetFunctionCallModel,FunctionNameFunctionCallModel"
   "@azure-tools/typespec-ts":
     package-dir: "openai"
-    emitter-output-dir: "{project-root}/generated"
+    emitter-output-dir: "{project-root}/../generated"
     generateMetadata: false
     generateTest: false
     isModularLibrary: true
